added sharing capabilities, todo get multiple users to share

--- a/apps/courseplanner/templates/share.html
+++ b/apps/courseplanner/templates/share.html
@@ -23,30 +23,30 @@
             <tbody id="planner_body">
                 <tr id="first_year">
                     <td class="has-text-weight-bold">1st Year</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                        <td style="white-space: pre;">{{year1[0]}}</td>
+                        <td style="white-space: pre;">{{year1[1]}}</td>
+                        <td style="white-space: pre;">{{year1[2]}}</td>
+                        <td style="white-space: pre;">{{year1[3]}}</td>
                     <tr id="second_year">
                         <td class="has-text-weight-bold">2nd Year</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td style="white-space: pre;">{{year2[0]}}</td>
+                        <td style="white-space: pre;">{{year2[1]}}</td>
+                        <td style="white-space: pre;">{{year2[2]}}</td>
+                        <td style="white-space: pre;">{{year2[3]}}</td>
                     </tr>
                     <tr id="third_year">
                         <td class="has-text-weight-bold">3rd Year</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td style="white-space: pre;">{{year3[0]}}</td>
+                        <td style="white-space: pre;">{{year3[1]}}</td>
+                        <td style="white-space: pre;">{{year3[2]}}</td>
+                        <td style="white-space: pre;">{{year3[3]}}</td>
                     </tr>
                     <tr id="fourth_year">
                         <td class="has-text-weight-bold">4th Year</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td style="white-space: pre;">{{year4[0]}}</td>
+                        <td style="white-space: pre;">{{year4[1]}}</td>
+                        <td style="white-space: pre;">{{year4[2]}}</td>
+                        <td style="white-space: pre;">{{year4[3]}}</td>
                     </tr>
             </tbody>
         </table>
@@ -66,7 +66,7 @@
       <div class="field has-addons">
         <p class="control">
           <button @click="getPlanners(1)" class="button">
-            <span>TODO: Add button to share planner</span>
+            <span>TODO: Get users, button for their IDs.</span>
           </button>
         </p>
       </div>
