finished edit course method

--- a/apps/courseplanner/templates/edit_course.html
+++ b/apps/courseplanner/templates/edit_course.html
@@ -18,6 +18,8 @@
 
 <section class="section is-half">
     <div class="container is-max-desktop">
-        [[=form]]
+        <form method="POST" action="[[=URL('edit_course')]]">
+            <input type="hidden" name="course_id" value="[[=course_id]]"> [[=form]]
+        </form>
     </div>
 </section>
