--- a/apps/courseplanner/templates/edit_course.html
+++ b/apps/courseplanner/templates/edit_course.html
@@ -18,7 +18,7 @@
 
 <section class="section is-half">
     <div class="container is-max-desktop">
-        <form method="POST" action="[[=URL('edit_course')]]">
+        <form method="POST" action="[[=URL('course/edit')]]">
             <input type="hidden" name="course_id" value="[[=course_id]]"> [[=form]]
         </form>
     </div>
