Adding back in name field for course
might delete this later but need it for backward compatibility

--- a/apps/courseplanner/templates/layout.html
+++ b/apps/courseplanner/templates/layout.html
@@ -64,9 +64,10 @@
             Courses
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="[[=URL('courses/create')]]">Create</a>
-            <a class="navbar-item" href="[[=URL('courses/history')]]">History</a>
-            <a class="navbar-item" href="[[=URL('courses/all')]]">All Courses</a>
+            <a class="navbar-item" href="[[=URL('course/Search')]]">Add</a>
+            <a class="navbar-item" href="[[=URL('course/create')]]">Create</a>
+            <a class="navbar-item" href="[[=URL('course/history')]]">History</a>
+            <a class="navbar-item" href="[[=URL('course/all')]]">All Courses</a>
           </div>
         </div>
       </div>
