--- a/apps/courseplanner/templates/layout.html
+++ b/apps/courseplanner/templates/layout.html
@@ -64,7 +64,7 @@
             Courses
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="[[=URL('course/Search')]]">Add</a>
+            <a class="navbar-item" href="[[=URL('course/search')]]">Search</a>
             <a class="navbar-item" href="[[=URL('course/create')]]">Create</a>
             <a class="navbar-item" href="[[=URL('course/history')]]">History</a>
             <a class="navbar-item" href="[[=URL('course/all')]]">All Courses</a>
