pushing edit course commit version

--- a/apps/courseplanner/templates/edit_course.html
+++ b/apps/courseplanner/templates/edit_course.html
@@ -18,8 +18,6 @@
 
 <section class="section is-half">
     <div class="container is-max-desktop">
-        <form method="POST" action="[[=URL('edit_course')]]">
-            <input type="hidden" name="course_id" value="[[=course_id]]"> [[=form]]
-        </form>
+        [[=form]]
     </div>
 </section>
