Revert "Change course edit to course/edit"
This reverts commit 8413ce40f0ae9c43cb733c5b19f235ea14f6c578.

--- a/apps/courseplanner/templates/edit_course.html
+++ b/apps/courseplanner/templates/edit_course.html
@@ -18,7 +18,7 @@
 
 <section class="section is-half">
     <div class="container is-max-desktop">
-        <form method="POST" action="[[=URL('course/edit')]]">
+        <form method="POST" action="[[=URL('edit_course')]]">
             <input type="hidden" name="course_id" value="[[=course_id]]"> [[=form]]
         </form>
     </div>
