--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -103,7 +103,7 @@
                                                 {{course.name}}
                                             </label>
                                             <!-- Update the Edit button anchor tag -->
-                                            <form method="POST" action="[[=URL('course/edit')]]">
+                                            <form method="POST" action="[[=URL('edit_course')]]">
                                                 <input type="hidden" name="course_id" :value="course.id">
                                                 <input type="hidden" name="name" :value="course.name">
                                                 <input type="hidden" name="number" :value="course.number">
