no longer dropdown for calculator

--- a/apps/courseplanner/templates/layout.html
+++ b/apps/courseplanner/templates/layout.html
@@ -46,13 +46,8 @@
               <a class="navbar-item" href="[[=URL('share')]]">Share Planner</a>
             </div>
           </div>
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link is-primary is-vcentered">
-              Grades
-            </a>
-            <div class="navbar-dropdown">
-              <a class="navbar-item" href="[[=URL('grades/calculator')]]">Calculate</a>
-            </div>
+          <div class="navbar-brand">
+            <a class="navbar-item is-primary is-vcentered" href="[[=URL('grades/calculator')]]">Grade Calculator</a>
           </div>
         </div>
 
