fixed planner name

--- a/apps/courseplanner/templates/index.html
+++ b/apps/courseplanner/templates/index.html
@@ -15,7 +15,7 @@
             <section class="section">
                 <div class="container">
                     <h2 id="planner_name" class="subtitle">
-                        Insert Planner Name Here
+                        [[=curr_user.first_name]] [[=curr_user.last_name]]'s Planner
                         <a class="button is-primary" @click="share_courses()">
                             <span>Share</span>
                         </a>
