--- a/apps/courseplanner/templates/courses_list.html
+++ b/apps/courseplanner/templates/courses_list.html
@@ -7,7 +7,7 @@
 
 <table id="table" class="table is-striped is-fullwidth">
     <thead>
-        <th><abbr title="Abbrevation">Abbr</abbr></th>
+        <th><abbr title="Abbreviation">Abbr</abbr></th>
         <th>Number</th>
         <th>Description</th>
         <th>Credit</th>
@@ -17,7 +17,7 @@
     <tbody>
         [[for row in rows:]]
         <tr>
-            <td>[[=row.abbrevation]]</td>
+            <td>[[=row.abbreviation]]</td>
             <td>[[=row.number]]</td>
             <td>[[=row.description]]</td>
             <td>[[=row.credits]]</td>
