Fixed layout.html and extra models.py

--- a/apps/courseplanner/templates/layout.html
+++ b/apps/courseplanner/templates/layout.html
@@ -38,25 +38,19 @@
           <div class="navbar-brand">
             <a class="navbar-item is-primary is-vcentered" href="[[=URL('share')]]">Share Planner</a>
           </div>
-        </div>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link is-primary is-vcentered">
-            Grades
-          </a>
-          <div class="navbar-dropdown">
-            <a class="navbar-item" href="[[=URL('grades/calculator')]]">Calculate</a>
-            <a class="navbar-item" href="[[=URL('user/profile')]]">Profile</a>
+          <div class="navbar-brand">
+            <a class="navbar-item is-primary is-vcentered" href="[[=URL('grades/calculator')]]">Grade Calculator</a>
           </div>
-        </div>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link is-primary is-vcentered">
-            Courses
-          </a>
-          <div class="navbar-dropdown">
-            <a class="navbar-item" href="[[=URL('course/search')]]">Search</a>
-            <a class="navbar-item" href="[[=URL('course/create')]]">Create</a>
-            <a class="navbar-item" href="[[=URL('course/history')]]">History</a>
-            <a class="navbar-item" href="[[=URL('course/all')]]">All Courses</a>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link is-primary is-vcentered">
+              Courses
+            </a>
+            <div class="navbar-dropdown">
+              <a class="navbar-item" href="[[=URL('course/search')]]">Search</a>
+              <a class="navbar-item" href="[[=URL('course/create')]]">Create</a>
+              <a class="navbar-item" href="[[=URL('course/history')]]">History</a>
+              <a class="navbar-item" href="[[=URL('course/all')]]">All Courses</a>
+            </div>
           </div>
         </div>
 
